refactor: centralize regex patterns
- Move all hardcoded regular expressions to a centralized `regex.json` configuration.
- Implement `RegexRequest` and `DataUtils` logic for dynamic pattern loading and runtime injection.
- Introduce a safe fallback routing mechanism to inject patterns into their respective enums based on key validation.
- Update `ActionBarParser`, `TabListParser`, and other feature classes to utilize the new centralized pattern registry.